// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.std.development.filesync;

option go_package = "namespacelabs.dev/foundation/std/development/filesync";

message FileSyncConfiguration {
    string root_dir = 1;
    int32  port     = 2;
}